Change layout to fixed height

--- a/index.html
+++ b/index.html
@@ -21,11 +21,20 @@
           width: 100%;
           height: 100%;
       }
+      #navigation {
+        margin:0px;
+        height: 70px;
+      }
       #table, #treemap {
         width: 100%;
       }
       #treemap {
         height: 400px;
+      }
+
+      #table {
+        height:400px;
+        overflow: auto;
       }
 
       #table > div > div.row > div.span6 {
@@ -72,8 +81,6 @@
         </div>
       </div>
     </form>
-    <dl id="breadcrumbs">
-    </dl>
     <div id="treemap">
     </div>
 
