Add option to see a total of all gov areas

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div class="span3">
           <label for="typ">Bereich</label>
           <select id="typ">
+            <option value="all">Alle</option>
             <option value="1">Senatsverwaltungen</option>
             <option value="3">Bezirke</option>
             <option value="2">Verfassungsorgane</option>
