--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       #table > div > div.row > div.span6 {
         display: none;
       }
+      #table table tr td:nth-child(2),
+      #table table tr td:nth-child(3) {
+        text-align: right;
+      }
     </style>
   </head>
 
