Add refresh button

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
             <option value="groups">Gruppen</option>
           </select>
         </div>
+        <div class="span1">
+          <br/>
+          <button style="margin-top:5px" class="btn" id="refresh">
+            <i class="icon-refresh"></i>
+          </button>
+        </div>
       </div>
     </form>
     <div id="treemap">
