Add another drilldown by area

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <option value="Ausgabetitel" selected="selected">Ausgaben</option>
           </select>
         </div>
-        <div class="span3">
+        <div class="span2">
           <label for="typ">Bereich</label>
-          <select id="typ">
+          <select class="span2" id="typ">
             <option value="all">Alle</option>
             <option value="1">Senatsverwaltungen</option>
             <option value="3">Bezirke</option>
@@ -79,7 +79,8 @@
         <div class="span2">
           <label for="drilldown">Anzeige nach</label>
           <select class="span2" id="drilldown">
-            <option value="plans" selected="selected">Einzelplan</option>
+            <option value="areas" selected="selected">Bereich</option>
+            <option value="plans">Einzelplan</option>
             <option value="functions">Funktionen</option>
             <option value="groups">Gruppen</option>
           </select>
