Do not drilldown Bereich if not all Bereiche

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <div class="span2">
           <label for="drilldown">Anzeige nach</label>
           <select class="span2" id="drilldown">
-            <option value="areas" selected="selected">Bereich</option>
-            <option value="plans">Einzelplan</option>
+            <option value="plans" selected="selected">Einzelplan</option>
             <option value="functions">Funktionen</option>
             <option value="groups">Gruppen</option>
+            <option value="areas">Bereich</option>
           </select>
         </div>
         <div class="span1">
