Don't show table entries as links if no further drilldown

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
       #table table tr th:first-child + th + th {
         text-align: right;
       }
+      .no-links a,
+      .no-links a:hover {
+        color: #333;
+        text-decoration: none;
+        cursor: text;
+      }
     </style>
   </head>
 
