Rename select option Funktionen to Politikfelder

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <label for="drilldown">Anzeige nach</label>
           <select class="span2" id="drilldown">
             <option value="plans" selected="selected">Einzelplan</option>
-            <option value="functions">Funktionen</option>
+            <option value="functions">Politikfelder</option>
             <option value="groups">Gruppen</option>
             <option value="areas">Bereich</option>
           </select>
