--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
           <label for="time">Haushaltsjahr</label>
           <select class="span2" id="time">
             <option value="2012">2012</option>
-            <option value="2013" selected="selected">2013</option>
+            <option value="2013">2013</option>
+            <option value="2014" selected="selected">2014</option>
+            <option value="2015">2015</option>
           </select>
         </div>
         <div class="span2">
