Show all Bezirke in Bereich dropdown

--- a/index.html
+++ b/index.html
@@ -84,8 +84,22 @@
           <select class="span2" id="typ">
             <option value="all">Alle</option>
             <option value="1">Senatsverwaltungen</option>
-            <option value="3">Bezirke</option>
             <option value="2">Verfassungsorgane</option>
+            <option value="3">Alle Bezirke</option>
+            <optgroup label="Bezirke">
+              <option value="34">Charlottenburg-Wilmersdorf</option>
+              <option value="32">Friedrichshain-Kreuzberg</option>
+              <option value="41">Lichtenberg</option>
+              <option value="40">Marzahn-Hellersdorf</option>
+              <option value="31">Mitte</option>
+              <option value="38">Neukölln</option>
+              <option value="33">Pankow</option>
+              <option value="42">Reinickendorf</option>
+              <option value="35">Spandau</option>
+              <option value="36">Steglitz-Zehlendorf</option>
+              <option value="37">Tempelhof-Schöneberg</option>
+              <option value="39">Treptow-Köpenick</option>
+            </optgroup>
           </select>
         </div>
         <div class="span2">
