Add navigation element mockup

--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
         </div>
       </div>
     </form>
+    <p>
+      <a href="">Politikfelder</a> &raquo; <a href="">Allgemeine Dienste</a> &raquo; Finanzverwaltung
+    </p>
     <div id="treemap">
     </div>
-
     <div id="table">
     </div>
 
