Added breadcrumb navigation

--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
         </div>
       </div>
     </form>
-    <p>
-      <a href="">Politikfelder</a> &raquo; <a href="">Allgemeine Dienste</a> &raquo; Finanzverwaltung
-    </p>
+    <p id='navigationbreadcrumbs'></p>
     <div id="treemap">
     </div>
     <div id="table">
