--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
           <select class="span2" id="time">
             <option value="2012">2012</option>
             <option value="2013">2013</option>
-            <option value="2014" selected="selected">2014</option>
+            <option value="2014">2014</option>
             <option value="2015">2015</option>
+            <option value="2016">2016</option>
+            <option value="2017" selected="selected">2017</option>
           </select>
         </div>
         <div class="span2">
